--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidSchool"
         tools:targetApi="31">
-
         <activity
-            android:name=".MainActivity"
+            android:name=".actitvity.EditEventActivity"
+            android:exported="false" />
+        <activity
+            android:name=".actitvity.NewEventActivity"
+            android:exported="false" />
+        <activity
+            android:name=".actitvity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
